--- a/.copier.yaml
+++ b/.copier.yaml
@@ -1,7 +1,7 @@
 ---
 # Changes here will be overwritten by Copier
-_commit: v0.0.0-31-gcd4e515
-_src_path: .
+_commit: v0.1.0
+_src_path: git+https://framagit.org/rdeville-public/programs/copier-generic-template
 copyright:
   mail: code@romaindeville.fr
   name: Romain Deville
