🐛(tpl/base): Update basi gitlab-ci.yaml template

--- a/template/.gitlab-ci.yml
+++ b/template/.gitlab-ci.yml
@@ -5,8 +5,8 @@
 # https://docs.gitlab.com/ee/ci/yaml/README.html#workflow
 workflow:
   rules:
-      # Do not run CI when commit title have following chars anywhere
-      # WIP, NO-CI or 🚧 (gitmoji for "work in progress", aka :construction:)
+    # Do not run CI when commit title have following chars anywhere
+    # WIP, NO-CI or 🚧 (gitmoji for "work in progress", aka :construction:)
     - if: $CI_COMMIT_MESSAGE =~ /(wip|WIP|NO-CI|🚧|:construction:)/
       when: never
     - if: $CI_MERGE_REQUEST_TITLE =~ /^(D|d)raft:/
@@ -23,6 +23,7 @@ variables:
   FF_SCRIPT_SECTIONS: true
 
 stages:
+  - pre-ci
   - lint
   - build
   - test
@@ -31,7 +32,7 @@ stages:
   - post-ci
 
 # Fake jobs that simply exit 0 to enable CI
-"Dumb Job - Exit 0":
+Dumb Job - Exit 0:
   image: alpine:latest
   stage: pre-ci
   script:
