--- a/copier/config/_tasks.yaml
+++ b/copier/config/_tasks.yaml
@@ -1,5 +1,2 @@
 ---
-_tasks:
-  - command:
-      - "{{ _copier_conf.src_path }}/copier/tasks/copierRun"
-      - "{{ _copier_operation }}"
+_tasks: []
