--- a/.envrc
+++ b/.envrc
@@ -7,9 +7,10 @@ PWD="$(pwd -P)"
 # Allow users to setup their own envrc files
 # NB: If my libs are loaded, this function is overloaded with my own which have
 # sha computation security and custom logs
-if ! source_env_if_exists ".envrc.local"
-then
-  return 1
+if [[ -f "${PWD}/.envrc.local" ]]; then
+  if ! source_env_if_exists ".envrc.local"; then
+    return 1
+  fi
 fi
 
 # Load .env file if it exists
@@ -19,15 +20,13 @@ dotenv_if_exists
 
 # If my libs are loaded, i.e. use_nix_flake and use_devbox functions exists,
 # try to use flake.nix devShells
-if type use_nix_flake >/dev/null
-then
+if type use_nix_flake >/dev/null; then
   use_nix_flake
 fi
 
 # If my libs are loaded, i.e. use_nix_flake and use_devbox functions exists,
 # try to use devbox shell through devbox.json
-if type use_devbox >/dev/null
-then
+if type use_devbox >/dev/null; then
   # Deactivate devbox warning due to this custom .envrc
   # shellcheck disable=SC2034
   DEVBOX_NO_ENVRC_UPDATE=1
