--- a/schemas/project.json
+++ b/schemas/project.json
@@ -7,12 +7,19 @@
     "required": [
       "name",
       "baseURL",
+      "issueURL",
       "slug"
     ],
     "name": {
       "type": "string"
     },
     "baseURL": {
+      "type": "string"
+    },
+    "issueURL": {
+      "type": "string"
+    },
+    "docURL": {
       "type": "string"
     },
     "slug": {
