--- a/.copier.yaml
+++ b/.copier.yaml
@@ -1,7 +1,8 @@
 ---
 # Changes here will be overwritten by Copier
-_commit: v0.1.2
+_commit: v0.2.0
 _src_path: git+https://framagit.org/rdeville-public/programs/copier-generic-template
+abuse_mail_code_of_conduct: abuse@romaindeville.fr
 copyright:
   mail: code@romaindeville.fr
   name: Romain Deville
@@ -18,13 +19,20 @@ gitignores:
   - Global/Vim
   - Global/VisualStudioCode
   - Global/Xcode
+  - Python
 licenses:
   date:
     firstYear: 2025
   primary: MIT
   secondaries:
     - BEERWARE
+maintainers:
+  - mail: code@romaindeville.fr
+    name: Romain Deville
 project:
-  baseURL: https://framagit.org/rdeville-public/programs/copier-generic-template
+  baseURL: https://framagit.org/rdeville-public/programs/
+  issueURL: https://framagit.org/rdeville-public/programs/copier-generic-template/-/issues
   name: Copier Generic Template
   slug: copier-generic-template
+security:
+  mail: security@romaindeville.fr
